[package]
name = "moss"
authors = ["Clover Johnson <clover.johnson@mailfence.com>"]
license = "MIT"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = { version = "1.20.2", default-features = false, features = ["alloc"] }
spin = "0.9.8"
talc = "4.4.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
