[package]
name = "moss"
authors = ["Clover Johnson <clover.johnson@mailfence.com>"]
license = "MIT"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["kernel"]

[build-dependencies]
bootloader = "0.11.8"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
ovmf-prebuilt = "0.2.1"
