[package]
name = "kernel"
authors = ["Clover Johnson <clover.johnson@mailfence.com>"]
license = "MIT"
readme = "../README.md"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.8"
once_cell = { version = "1.20.2", default-features = false, features = ["alloc"] }
spin = "0.9.8"
talc = "4.4.2"
